--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_install:
 install: 
     - govendor sync
 script:
-    - go test -v .
+    - go test -race -coverprofile=coverage.txt -covermode=atomic
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
