use sudo commadn to excute go test, prepare for OVS related command

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_install:
 install: 
     - govendor sync
 script:
-    - go test -race -coverprofile=coverage.txt -covermode=atomic
+    - sudo -E env PATH=$PATH go test -race -coverprofile=coverage.txt -covermode=atomic
 after_success:
     - bash <(curl -s https://codecov.io/bash)
